Fixed overlapping callout on smaller screen sizes, reduced the padding on features for mobile, and made quotes in carousel italic.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@
 .hero-container-desktop {
     height: 65vh;
     background-color: black;
+    margin-top: 65px;
 }
 
 .col-deadlift {
@@ -128,9 +129,9 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 61vh;
+    height: 65vh;
     max-width: 2000px;
-    margin-top: 65px;
+    
 }
 
 .btn-home {
@@ -154,6 +155,9 @@
     left: 0%;
 }
 
+.container-quotes {
+    margin-top: 10px;
+}
 
 /*--Styrk Gym features--*/
 
@@ -164,6 +168,7 @@
 
 .row-we-offer-lg {
     max-width: 768px;
+    margin-bottom: 15px;
 }
 
 
@@ -201,9 +206,16 @@
     overflow: hidden;
 }
 
-.become-a-member {
+.become-a-member-md {
     font-family: "Lobster", sans-serif;
     color: #b8c6b2;
+    margin-top: 200px;
+}
+
+.become-a-member-sm {
+    font-family: "Lobster", sans-serif;
+    color: #b8c6b2;
+    margin-top: 100px;
 }
 
 
